test/Fail/ParseErrorUnexpectedEquals.agda
-- Andreas, 2024-08-18
-- Trigger "Parse error: unexpected '='"

f = (x = e)
